--- a/fe/package.json
+++ b/fe/package.json
@@ -9,11 +9,15 @@
   },
   "dependencies": {
     "@mdi/font": "^3.6.95",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-video-player": "^5.0.2",
+    "vuelidate": "^0.7.6",
     "vuetify": "^2.2.11",
+    "vuetify-dialog": "^2.0.12",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
