--- a/be/package.json
+++ b/be/package.json
@@ -17,6 +17,7 @@
     "express-fileupload": "^1.2.0",
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
+    "ip": "^1.1.5",
     "jade": "~1.11.0",
     "mongoose": "^5.10.15",
     "mongoose-bcrypt": "^1.9.0",
@@ -24,6 +25,7 @@
     "node-mediainfo": "^1.0.3",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^3.0.3"
   }
 }
