--- a/fe/package.json
+++ b/fe/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "^3.6.95",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "roboto-fontface": "*",
     "socket.io-client": "^3.0.3",
     "vue": "^2.6.11",
